--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,67 +1,73 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent" >
+    <ImageView android:id="@+id/movie_poster"
+        android:src="@drawable/poster"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"/>
+    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
+        android:background="@android:color/transparent">
+        <LinearLayout android:orientation="vertical"
+            android:paddingTop="300dp" android:background="@android:color/transparent"
+            android:layout_width="match_parent" android:layout_height="match_parent">
+            <LinearLayout android:orientation="vertical" android:background="@android:color/white"
+                android:layout_width="match_parent" android:layout_height="match_parent"
+                android:layout_margin="16dp" android:padding="16dp">
 
-    <LinearLayout android:orientation="vertical"
-        android:paddingLeft="0dp" android:paddingRight="0dp" android:paddingTop="0dp" android:paddingBottom="0dp"
-        android:layout_margin="0dp"
-        android:layout_width="match_parent" android:layout_height="match_parent">
-        <ImageView android:id="@+id/movie_poster"
-            android:src="@drawable/poster"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-        <ToggleButton android:id="@+id/favorite_toggle"
-            android:textOff="" android:textOn=""
-            android:background="@drawable/ic_toggle"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_width="36dp" android:layout_height="36dp" />
-
-        <TextView android:id="@+id/movie_rating"
-            android:text="@string/movie_rating_label"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:textStyle="bold"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/movie_release"
-            android:text="@string/movie_release_label"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:textStyle="bold"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/movie_overview"
-            android:text="@string/please_select_movie_desc"
-            android:textSize="@dimen/abc_text_size_small_material"
-            android:padding="@dimen/activity_vertical_margin"
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
-        <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
-            android:padding="@dimen/activity_vertical_margin"
-            android:layout_width="match_parent" android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/movie_trailers_label"
-                android:text="@string/movie_trailers_label"
-                android:textSize="@dimen/abc_text_size_medium_material"
-                android:textStyle="bold"
-                android:paddingBottom="5dp"
-                android:layout_width="match_parent" android:layout_height="wrap_content" />
-            <View android:background="@android:color/darker_gray"
-                android:layout_width="match_parent" android:layout_height="1dp" />
+                <TextView android:id="@+id/movie_rating"
+                    android:text="@string/movie_rating_label"
+                    android:textSize="@dimen/abc_text_size_medium_material"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                <TextView android:id="@+id/movie_release"
+                    android:text="@string/movie_release_label"
+                    android:textSize="@dimen/abc_text_size_medium_material"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/movie_overview"
+                    android:text="@string/please_select_movie_desc"
+                    android:textSize="@dimen/abc_text_size_small_material"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent" android:layout_height="wrap_content" />
+                <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/movie_trailers_label"
+                        android:text="@string/movie_trailers_label"
+                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:textStyle="bold"
+                        android:paddingBottom="5dp"
+                        android:layout_width="match_parent" android:layout_height="wrap_content" />
+                    <View android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent" android:layout_height="1dp" />
+                </LinearLayout>
+                <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/movie_reviews_label"
+                        android:text="@string/movie_reviews_label"
+                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:textStyle="bold"
+                        android:paddingBottom="5dp"
+                        android:layout_width="match_parent" android:layout_height="wrap_content" />
+                    <View android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent" android:layout_height="1dp" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-        <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
-            android:padding="@dimen/activity_vertical_margin"
-            android:layout_width="match_parent" android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/movie_reviews_label"
-                android:text="@string/movie_reviews_label"
-                android:textSize="@dimen/abc_text_size_medium_material"
-                android:textStyle="bold"
-                android:paddingBottom="5dp"
-                android:layout_width="match_parent" android:layout_height="wrap_content" />
-            <View android:background="@android:color/darker_gray"
-                android:layout_width="match_parent" android:layout_height="1dp" />
-        </LinearLayout>
+    </ScrollView>
+    <ToggleButton android:id="@+id/favorite_toggle"
+        android:textOff="" android:textOn=""
+        android:background="@drawable/ic_toggle"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_gravity="bottom|right"
+        android:layout_width="36dp" android:layout_height="36dp" />
 
-    </LinearLayout>
-</ScrollView>
+</FrameLayout>
 
