--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,82 +1,149 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent" >
-    <ImageView android:id="@+id/movie_poster"
-        tools:src="@drawable/poster" tools:scaleType="centerCrop"
-        android:layout_width="match_parent" android:layout_height="match_parent"/>
-    <ScrollView android:background="@android:color/transparent"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-        <LinearLayout android:orientation="vertical"
-            android:paddingTop="300dp" android:background="@android:color/transparent"
-            android:layout_width="match_parent" android:layout_height="match_parent">
+    <!-- Background Movie Poster Image -->
+    <ImageView
+        android:id="@+id/movie_poster"
+        tools:src="@drawable/poster"
+        tools:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <ScrollView
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!--To add Top space on top of the surface-->
+        <LinearLayout
+            android:paddingTop="300dp" tools:paddingTop="200dp"
+            android:background="@android:color/transparent"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <!-- White Surface -->
-            <LinearLayout android:orientation="vertical" android:background="@android:color/white"
-                android:layout_margin="16dp" android:padding="16dp"
-                android:layout_width="match_parent" android:layout_height="match_parent">
+            <android.support.v7.widget.CardView
+                card_view:cardElevation="2dp"
+                card_view:cardCornerRadius="2dp"
+                card_view:contentPadding="16dp"
+                card_view:cardBackgroundColor="@android:color/white"
+                card_view:cardUseCompatPadding="true"
+                android:layout_margin="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <TextView android:id="@+id/movie_title" android:text="@string/please_select_movie"
-                    android:textSize="@dimen/abc_text_size_headline_material" android:textStyle="bold"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:layout_width="match_parent" android:layout_height="wrap_content" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <!--<TextView android:id="@+id/movie_tagline" tools:text="cool tagline goes here"-->
-                    <!--android:textSize="@dimen/abc_text_size_medium_material"-->
-                    <!--android:layout_width="match_parent" android:layout_height="wrap_content" />-->
-
-                <RatingBar android:id="@+id/movie_rating_bar" style="?android:attr/ratingBarStyleSmall"
-                    android:numStars="5" android:stepSize="0.1" android:progressTint="@color/pink_500"
-                    android:secondaryProgressTint="@color/pink_500"
-                    android:rating="3.5"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-
-                <!--<TextView android:id="@+id/movie_rating"-->
-                    <!--android:text="@string/movie_rating_label"-->
-                    <!--android:textSize="@dimen/abc_text_size_medium_material"-->
-                    <!--android:textStyle="bold"-->
-                    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
-                    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
-
-                <TextView android:id="@+id/movie_release"
-                    android:text="@string/movie_release_label"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-
-                <TextView android:id="@+id/movie_overview" android:text="@string/please_select_movie_desc"
-                    android:textSize="@dimen/abc_text_size_small_material"
-                    android:layout_width="match_parent" android:layout_height="wrap_content" />
-
-
-                <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/movie_trailers_label"
-                        android:text="@string/movie_trailers_label"
-                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:id="@+id/movie_title"
+                        android:text="@string/please_select_movie"
+                        android:textSize="@dimen/abc_text_size_headline_material"
                         android:textStyle="bold"
-                        android:paddingBottom="5dp"
-                        android:layout_width="match_parent" android:layout_height="wrap_content" />
-                    <View android:background="@android:color/darker_gray"
-                        android:layout_width="match_parent" android:layout_height="1dp" />
-                </LinearLayout>
-                <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <!--<TextView android:id="@+id/movie_tagline" tools:text="cool tagline goes here"-->
+                        <!--android:textSize="@dimen/abc_text_size_medium_material"-->
+                        <!--android:layout_width="match_parent" android:layout_height="wrap_content" />-->
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RatingBar
+                            android:id="@+id/movie_rating_bar"
+                            style="?android:attr/ratingBarStyleSmall"
+                            android:isIndicator="true"
+                            android:progressTint="@color/pink_500"
+                            android:numStars="10"
+                            android:stepSize="0.1"
+                            android:rating="7.22"
+                            tools:rating="7.22"
+                            android:layout_marginTop="1dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:id="@+id/movie_rating"
+                            android:textSize="@dimen/abc_text_size_small_material"
+                            tools:text="8.5"
+                            android:minHeight="16dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_toRightOf="@+id/movie_rating_bar"
+                            android:layout_toEndOf="@+id/movie_rating_bar"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:textSize="@dimen/abc_text_size_small_material"
+                            android:text="/10"
+                            android:textColor="#CCC"
+                            android:minHeight="16dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_toRightOf="@+id/movie_rating"
+                            android:layout_toEndOf="@+id/movie_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            />
+                    </RelativeLayout>
                     <TextView
-                        android:id="@+id/movie_reviews_label"
-                        android:text="@string/movie_reviews_label"
-                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:id="@+id/movie_release"
+                        android:drawableStart="@drawable/ic_calendar"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:drawablePadding="14dp"
                         android:textStyle="bold"
-                        android:paddingBottom="5dp"
-                        android:layout_width="match_parent" android:layout_height="wrap_content" />
-                    <View android:background="@android:color/darker_gray"
-                        android:layout_width="match_parent" android:layout_height="1dp" />
-                </LinearLayout>
+                        tools:text="2016-05-05"
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:minHeight="48dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/movie_overview"
+                        android:text="@string/please_select_movie_desc"
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:layout_width="match_parent" android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/movie_trailers_label"
+                            android:text="@string/movie_trailers_label"
+                            android:textSize="@dimen/abc_text_size_medium_material"
+                            android:textStyle="bold"
+                            android:paddingBottom="5dp"
+                            android:layout_width="match_parent" android:layout_height="wrap_content" />
+                        <View android:background="@android:color/darker_gray"
+                            android:layout_width="match_parent" android:layout_height="1dp" />
+                    </LinearLayout>
+                    <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:layout_width="match_parent" android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/movie_reviews_label"
+                            android:text="@string/movie_reviews_label"
+                            android:textSize="@dimen/abc_text_size_medium_material"
+                            android:textStyle="bold"
+                            android:paddingBottom="5dp"
+                            android:layout_width="match_parent" android:layout_height="wrap_content" />
+                        <View android:background="@android:color/darker_gray"
+                            android:layout_width="match_parent" android:layout_height="1dp" />
+                    </LinearLayout>
             </LinearLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
     <ToggleButton android:id="@+id/favorite_toggle"
