--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,8 @@
         <!--For compatibility-->
         <item name="windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/CustomActionBarTheme</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:lineSpacingExtra">6dp</item>
     </style>
     <!-- the theme applied to the application or activity -->
     <style name="CustomActionBarTheme" parent="Widget.AppCompat.ActionBar.Solid">
