--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,8 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -27,132 +26,146 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- White Surface -->
-            <android.support.v7.widget.CardView
-                card_view:cardElevation="2dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:contentPadding="16dp"
-                card_view:cardBackgroundColor="@android:color/white"
-                card_view:cardUseCompatPadding="true"
-                android:layout_margin="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <!-- White Surface -->
+        <android.support.v7.widget.CardView
+            app:cardElevation="2dp"
+            app:cardCornerRadius="2dp"
+            app:contentPadding="16dp"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardUseCompatPadding="true"
+            android:layout_margin="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/movie_title"
+                    android:text="@string/please_select_movie"
+                    android:textSize="@dimen/abc_text_size_headline_material"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!--<TextView android:id="@+id/movie_tagline" tools:text="cool tagline goes here"-->
+                    <!--android:textSize="@dimen/abc_text_size_medium_material"-->
+                    <!--android:layout_width="match_parent" android:layout_height="wrap_content" />-->
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RatingBar
+                        android:id="@+id/movie_rating_bar"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:isIndicator="true"
+                        android:progressTint="@color/pink_500"
+                        android:numStars="10"
+                        android:stepSize="0.1"
+                        android:rating="7.22"
+                        tools:rating="7.22"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:id="@+id/movie_title"
-                        android:text="@string/please_select_movie"
-                        android:textSize="@dimen/abc_text_size_headline_material"
-                        android:textStyle="bold"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <!--<TextView android:id="@+id/movie_tagline" tools:text="cool tagline goes here"-->
-                        <!--android:textSize="@dimen/abc_text_size_medium_material"-->
-                        <!--android:layout_width="match_parent" android:layout_height="wrap_content" />-->
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <RatingBar
-                            android:id="@+id/movie_rating_bar"
-                            style="?android:attr/ratingBarStyleSmall"
-                            android:isIndicator="true"
-                            android:progressTint="@color/pink_500"
-                            android:numStars="10"
-                            android:stepSize="0.1"
-                            android:rating="7.22"
-                            tools:rating="7.22"
-                            android:layout_marginTop="1dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:id="@+id/movie_rating"
-                            android:textSize="@dimen/abc_text_size_small_material"
-                            tools:text="8.5"
-                            android:minHeight="16dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_toRightOf="@+id/movie_rating_bar"
-                            android:layout_toEndOf="@+id/movie_rating_bar"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:textSize="@dimen/abc_text_size_small_material"
-                            android:text="/10"
-                            android:textColor="#CCC"
-                            android:minHeight="16dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_toRightOf="@+id/movie_rating"
-                            android:layout_toEndOf="@+id/movie_rating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            />
-                    </RelativeLayout>
-                    <TextView
-                        android:id="@+id/movie_release"
-                        android:drawableStart="@drawable/ic_calendar"
-                        android:drawableLeft="@drawable/ic_calendar"
-                        android:drawablePadding="14dp"
-                        android:textStyle="bold"
-                        tools:text="2016-05-05"
+                        android:id="@+id/movie_rating"
                         android:textSize="@dimen/abc_text_size_small_material"
-                        android:minHeight="48dp"
+                        tools:text="8.5"
+                        android:minHeight="16dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/movie_rating_bar"
+                        android:layout_toEndOf="@+id/movie_rating_bar"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:id="@+id/movie_overview"
-                        android:text="@string/please_select_movie_desc"
                         android:textSize="@dimen/abc_text_size_small_material"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:text="/10"
+                        android:textColor="#CCC"
+                        android:minHeight="16dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/movie_rating"
+                        android:layout_toEndOf="@+id/movie_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
+                </RelativeLayout>
+                <TextView
+                    android:id="@+id/movie_release"
+                    android:drawableStart="@drawable/ic_calendar"
+                    android:drawableLeft="@drawable/ic_calendar"
+                    android:drawablePadding="14dp"
+                    android:textStyle="bold"
+                    tools:text="2016-05-05"
+                    android:textSize="@dimen/abc_text_size_small_material"
+                    android:minHeight="48dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-                    <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:layout_width="match_parent" android:layout_height="wrap_content">
-                        <TextView
-                            android:id="@+id/movie_trailers_label"
-                            android:text="@string/movie_trailers_label"
-                            android:textSize="@dimen/abc_text_size_medium_material"
-                            android:textStyle="bold"
-                            android:paddingBottom="5dp"
-                            android:layout_width="match_parent" android:layout_height="wrap_content" />
-                        <View android:background="@android:color/darker_gray"
-                            android:layout_width="match_parent" android:layout_height="1dp" />
-                    </LinearLayout>
-                    <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:layout_width="match_parent" android:layout_height="wrap_content">
-                        <TextView
-                            android:id="@+id/movie_reviews_label"
-                            android:text="@string/movie_reviews_label"
-                            android:textSize="@dimen/abc_text_size_medium_material"
-                            android:textStyle="bold"
-                            android:paddingBottom="5dp"
-                            android:layout_width="match_parent" android:layout_height="wrap_content" />
-                        <View android:background="@android:color/darker_gray"
-                            android:layout_width="match_parent" android:layout_height="1dp" />
-                    </LinearLayout>
+                <TextView
+                    android:id="@+id/movie_overview"
+                    android:text="@string/please_select_movie_desc"
+                    android:textSize="@dimen/abc_text_size_small_material"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/movie_trailers_label"
+                        android:text="@string/movie_trailers_label"
+                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:textStyle="bold"
+                        android:paddingBottom="5dp"
+                        android:layout_width="match_parent" android:layout_height="wrap_content" />
+                    <View android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent" android:layout_height="1dp" />
+                </LinearLayout>
+                <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/movie_reviews_label"
+                        android:text="@string/movie_reviews_label"
+                        android:textSize="@dimen/abc_text_size_medium_material"
+                        android:textStyle="bold"
+                        android:paddingBottom="5dp"
+                        android:layout_width="match_parent" android:layout_height="wrap_content" />
+                    <View android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent" android:layout_height="1dp" />
+                </LinearLayout>
             </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
-    <ToggleButton android:id="@+id/favorite_toggle"
-        android:textOff="" android:textOn=""
-        android:background="@drawable/ic_toggle"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_gravity="bottom|right"
-        android:layout_width="36dp" android:layout_height="36dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/favorite_toggle"
+        android:src="@drawable/heart"
+        app:backgroundTint="@color/pink_500"
+        android:layout_gravity="end|bottom"
+        app:fabSize="normal"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        android:layout_margin="16dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        />
+
+    <!--<ToggleButton android:id="@+id/favorite_toggle"-->
+        <!--android:textOff="" android:textOn=""-->
+        <!--android:background="@drawable/ic_toggle"-->
+        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
+        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:layout_gravity="bottom|right"-->
+        <!--android:layout_width="36dp" android:layout_height="36dp" />-->
 
 </FrameLayout>
 
