--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,18 +1,23 @@
 <LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
-    <TextView android:id="@+id/movie_review_author"
+    <TextView
+        android:id="@+id/movie_review_author"
         android:text="@string/movie_review_author"
         android:textStyle="bold"
         android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/movie_review_content"
+        android:importantForAccessibility="no"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/movie_review_content"
         android:text="@string/movie_review_content"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingTop="4dp"
-        android:layout_width="match_parent" android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
