--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -9,6 +9,7 @@
         android:id="@+id/grid_item_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         tools:layout_width="wrap_content"
         tools:layout_height="wrap_content"
         tools:src="@drawable/poster" />
