--- a/app/src/main/res/layout/grid_item_trailer.xml
+++ b/app/src/main/res/layout/grid_item_trailer.xml
@@ -13,6 +13,7 @@
         android:layout_margin="0dp"
         android:layout_gravity="top|left"
         android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
